# dkg-ceremony

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
api/: dkg_admin.proto
docker/junocashd/: Dockerfile
src/: ceremony_hash.rs  config.rs  crypto.rs  derive.rs  hash.rs  lib.rs  main.rs  manifest.rs  offline.rs  online.rs  proto.rs  roster.rs  smoke.rs  tls.rs  transcript.rs  zip316.rs
tests/: e2e_txsign_ext.rs  online_integration.rs  unit_tests.rs
