[package]
name = "dkg-ceremony"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
bech32 = "0.11.0"
bytes = "1.11.1"
clap = { version = "4.5.57", features = ["derive"] }
f4jumble = "0.1.1"
hex = "0.4.3"
http = "1.4.0"
orchard = "0.12.0"
pasta_curves = "0.5.1"
prost = "0.14.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "155c1803cf4187ee4635377a9cf589a71ae5ebfa", features = ["frost"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "serde"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14.3", default-features = false, features = ["codegen", "tls-ring", "transport"] }
tonic-prost = "0.14.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zcash_address = "0.10.1"
zcash_encoding = "0.3.0"
zcash_protocol = "0.7.2"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.3"

[dev-dependencies]
rcgen = "0.13.2"
tempfile = "3.22.0"
tokio-stream = { version = "0.1.17", features = ["net"] }
